# adas-perception-sensor-fusion

./: .gitignore  CMakeLists.txt  README.md  config.yaml  run_pipeline.py
.github/workflows/: build.yml
docs/: adas_architecture.md  algorithms.md  controller_logic.md  sensors.md
include/: ImageFrame.h
src/: .gitkeep  CMakeLists.txt  ImageFrame.cpp  main.cpp
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/decision/: acc_decision.cpp  acc_decision.hpp
src/cpp/lidar/: lidar_frame.cpp  lidar_frame.hpp
src/cpp/perception/: image_frame.cpp  image_frame.hpp  perception_pipeline.cpp  perception_pipeline.hpp
src/cpp/tracker/: ekf_tracker.cpp  ekf_tracker.hpp  timestamp_sync.cpp  timestamp_sync.hpp
src/include/: .gitkeep  CMakeList.txt  README.md
src/python/decision/: acc_decision.py
tools/: detect_and_track.py  lane_detector.py
tools/lane_modules/: __init__.py  color_filter.py  histogram.py  lane_fitter.py  ldw.py  preprocessor.py  roi_calibrator.py  sliding_window.py
